api-reference/rest-apis/v1/documents/update-documents.mdx
---
title: "Update Documents"
api: "POST https://api.velt.dev/v1/organizations/documents/update"
# api: "POST https://updatedocuments.api.velt.dev/"
---

Use this API to update metadata of documents within an organization.

# Endpoint

`POST https://api.velt.dev/v1/organizations/documents/update`

# Headers

<ParamField header="x-velt-api-key" type="string" required>
  Your API key.
</ParamField>

<ParamField header="x-velt-auth-token" type="string" required>
  Your [Auth Token](/security/auth-tokens).
</ParamField>

# Body

#### Params

<ParamField body="data" type="object" required>
  <Expandable title="properties">
    <ParamField body="organizationId" type="string" required>
      Organization ID
    </ParamField>

    <ParamField body="documents" type="Document[]" required>
      Array of Document objects
    </ParamField>
  </Expandable>
</ParamField>

## **Example Requests**

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documents": [
      {
        "documentId": "yourDocumentId",
        "documentName": "Your Document Name"
      }
    ]
  }
}
```

# Response

#### Success Response

```JSON
{
  "result": {
    "status": "success",
    "message": "Document(s) updated successfully.",
    "data": {
      "yourDocumentId": {
        "success": true,
        "id": "8121657101517513",
        "message": "Updated Successfully"
      }
    }
  }
}
```

#### Failure Response

```JSON
{
  "error": {
    "message": "ERROR_MESSAGE",
    "status": "INVALID_ARGUMENT"
  }
}
```

#### Per-Item Failures

This endpoint returns HTTP `200` even when individual documents fail. Check `success` on each entry rather than the HTTP status.

<ResponseField name="code" type="string">
  Why this particular item failed. Present on every entry with `"success": false`.

  | Value | Meaning | Safe to retry? |
  | --- | --- | --- |
  | `not-found` | The document does not exist. | No |
  | `internal` | A genuine server-side failure. | Yes |
</ResponseField>

```JSON
{
  "result": {
    "status": "success",
    "message": "Document(s) updated successfully.",
    "data": {
      "yourDocumentId1": {
        "success": true,
        "id": "6737987049068973",
        "message": "Updated Successfully"
      },
      "yourDocumentId2": {
        "success": false,
        "id": "yourDocumentId2",
        "message": "Document does not exist",
        "code": "not-found"
      }
    }
  }
}
```

<ResponseExample>
```js
{
  "result": {
    "status": "success",
    "message": "Document(s) updated successfully.",
    "data": {
      "yourDocumentId": {
        "success": true,
        "id": "8121657101517513",
        "message": "Updated Successfully"
      }
    }
  }
}
```
</ResponseExample>