api-reference/rest-apis/v2/documents/update-documents.mdx
---
title: "Update Documents"
api: "POST https://api.velt.dev/v2/organizations/documents/update"
---

Use this API to update metadata of documents within an organization.

# Endpoint

`POST https://api.velt.dev/v2/organizations/documents/update`

# Headers

<ParamField header="x-velt-api-key" type="string" required>
  Your API key.
</ParamField>

<ParamField header="x-velt-auth-token" type="string" required>
  Your [Auth Token](/security/auth-tokens).
</ParamField>

# Body

#### Params

<ParamField body="data" type="object" required>
  <Expandable title="properties">
    <ParamField body="organizationId" type="string" required>
      Organization ID
    </ParamField>

    <ParamField body="documents" type="Document[]" required>
      Array of Document objects
    </ParamField>
  </Expandable>
</ParamField>

## **Example Requests**

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documents": [
      {
        "documentId": "yourDocumentId",
        "documentName": "Your Document Name"
      }
    ]
  }
}
```

# Response

#### Success Response

```JSON
{
  "result": {
    "status": "success",
    "message": "Document(s) updated successfully.",
    "data": {
      "yourDocumentId": {
        "success": true,
        "id": "8121657101517513",
        "message": "Updated Successfully"
      }
    }
  }
}
```

#### Failure Response

```JSON
{
  "error": {
    "message": "ERROR_MESSAGE",
    "status": "INVALID_ARGUMENT"
  }
}
```

#### Partial Failures

When only some of the documents in the batch fail, this endpoint returns HTTP `500` and puts a per-item breakdown in `error.details`, keyed by the document IDs you sent.

<Warning>
  A partial failure is reported as `500 INTERNAL` even when nothing actually went wrong on the server, such as when a document simply does not exist. Branch on the per-item `code` rather than the HTTP status when deciding whether to retry. Retrying on the status alone will loop on `not-found`, which will never succeed.
</Warning>

<ResponseField name="code" type="string">
  Why this particular item failed. Present on every entry with `"success": false`.

  | Value | Meaning | Safe to retry? |
  | --- | --- | --- |
  | `not-found` | The document does not exist. | No |
  | `internal` | A genuine server-side failure. | Yes |
</ResponseField>

```JSON
{
  "error": {
    "status": "INTERNAL",
    "message": "Error updating document(s).",
    "details": {
      "yourDocumentId1": {
        "success": true,
        "id": "8121657101517513",
        "message": "Updated Successfully"
      },
      "yourDocumentId2": {
        "success": false,
        "id": "yourDocumentId2",
        "message": "Document does not exist",
        "code": "not-found"
      }
    }
  }
}
```

<ResponseExample>
```js
{
  "result": {
    "status": "success",
    "message": "Document(s) updated successfully.",
    "data": {
      "yourDocumentId": {
        "success": true,
        "id": "8121657101517513",
        "message": "Updated Successfully"
      }
    }
  }
}
```
</ResponseExample>